--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "tdms",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "chenjunhui <1126509225@qq.com>",
+  "name": "vue-manage-system",
+  "version": "3.2.0",
+  "description": "基于Vue.js 2.x系列 + element-ui 内容管理系统解决方案",
+  "author": "lin-xin <2981207131@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "element-ui": "^2.4.8",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "axios": "^0.15.3",
+    "babel-polyfill": "^6.23.0",
+    "element-ui": "^2.4.5",
+    "mavon-editor": "^2.5.4",
+    "vue": "^2.5.16",
+    "vue-cropperjs": "^2.2.0",
+    "vue-quill-editor": "3.0.6",
+    "vue-router": "^3.0.1",
+    "vue-schart": "^1.0.0",
+    "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -28,7 +33,6 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^5.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -39,7 +43,6 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -54,12 +57,12 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
+    "last 5 versions",
     "not ie <= 8"
   ]
 }
